2014-03-22  Kaz Kylheku  <kaz@kylheku.com>

	Version 87

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated

	* txr.vim: Regenerated.

2014-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* utf8.c (w_fopen, w_popen, w_freopen, w_remove, w_rename): Revert
	2014-03-14 changes.

2014-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (me_when): New static function.
	(eval_init): Register "when" macro.

	* txr.1: Documented when macro.

2014-03-19  Kaz Kylheku  <kaz@kylheku.com>

	Second round of bugfixing on the theme of the previous commit.
	Here were are changing the output clause to recognize all special
	clause tokens that are not used in output and turning them into
	regular Lisp.  So @(if a b c) in an output clause works once again,
	recognized as IF exprs_opt ')' syntax, and turned into Lisp. Other
	things work that didn't work before like @(and), @(or) and so forth.

	* parser.y (make_expr): New static function.
	(not_a_clause): New nonterminal.
	(out_clause): Remove error-catching productions for match-side
	clauses.
	(o_elems): Now consists of a mixture of o_elems and not_a_clause's.

2014-03-19  Kaz Kylheku  <kaz@kylheku.com>

	Fixing gaping bug in the handling of @-delimited expressions
	within quasiliterals. This has been a problem for years.
	Quasiliteral strings existed very early before TXR Lisp was introduced.
	So it made sense that when @ is seen in a quasiliteral, the
	lexical analyzer pushed into the SPECIAL state in which directives
	are recognized, like in the pattern language. I noticed
	this because there is an @(if) directive now, which prevents
	`@(if ...)` from being valid.

	* parser.l (QSPECIAL): New scanner state. This is a state
	similar to SPECIAL that we enter into when @ is seen in a QSLIT state.
	In this state we recognize constructs like braced variables, but not
	certain other features like directives.

2014-03-19  Kaz Kylheku  <kaz@kylheku.com>
